--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -16,6 +16,10 @@ h1 {
 }
 
 h2 {
+    font-size: 3rem;
+}
+
+h3 {
     font-size: 2.5rem;
 }
 
@@ -40,6 +44,7 @@ li {
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
 }
 
 .container {
@@ -71,14 +76,14 @@ nav {
 
 .main-projects {
     position: absolute;
-    top: 25vh;
-    height: 50vh;
-    max-height: 50vh;
+    top: 20vh;
+    height: 60vh;
+    max-height: 60vh;
     right: 50px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    row-gap: 100px;
+    row-gap: 80px;
     overflow-y: auto;
 }
 
@@ -92,5 +97,8 @@ nav {
     padding: calc(var(--pad)*2 + 96px) calc(var(--pad)*2);
 }
 
+.project h2 {
+    margin-left: 1rem;
+}
 
 
