ADDED "Connect"  page CREATED Footer component

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -6,7 +6,7 @@
     }
 
 * {
-    font-family: "Advent Pro Regular", sans-serif;
+    font-family: "Advent Pro Regular", "Lato", sans-serif;
     box-sizing: border-box;
     margin: 0;
 }
