--- a/app/styles/connect.css
+++ b/app/styles/connect.css
@@ -23,7 +23,8 @@ h3 {
     font-size: 2.5rem;
 }
 
-p {
+p,
+label {
     font-size: 2rem;
 }
 
@@ -50,6 +51,45 @@ nav {
 body{
   margin:0;
   padding: 0;
+}
+
+fieldset {
+    position: absolute;
+    top: 25vh;
+    height: 50vh;
+    max-height: 50vh;
+    width: 40vw;
+    max-width: 40vw;
+    right: 50px;
+    border: none;
+}
+
+fieldset * {
+    display: block;
+}
+
+fieldset input {
+    margin-bottom: 2rem;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    padding-left: 1rem;
+    font-size: 1rem;
+}
+
+fieldset label {
+    margin-bottom: 15px;
+}
+
+fieldset textarea {
+    width: 100%;
+    height: 210px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    padding: 1rem;
+    resize: none;
+    font-size: 1rem;
 }
 
 .container {
