--- a/app/styles/loader.css
+++ b/app/styles/loader.css
@@ -1,6 +1,17 @@
+*,
+::before,
+::after {
+    font-family: "Advent Pro Regular", "Lato", sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: var(--text-general);
+    /* border: 1px solid red; */
+}
+
 .loader-container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
