--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,3 +1,5 @@
+
+
 /* Using Autumn color palette */
 /* :root {
     --main-background: #1A2A43;
@@ -151,7 +153,8 @@ fieldset button {
 .main-content ul li {
     margin-right: 2rem;
 }
-.main-projects {
+.main-projects,
+.main-connect {
     height: 90vh;
     max-width: 100vw;
     display: flex;
@@ -159,6 +162,14 @@ fieldset button {
     align-items: flex-end;
     row-gap: 80px;
     overflow-y: auto;
+}
+.main-connect {
+    margin-top: 13vh;
+}
+
+.connect h2 {
+    margin-left: 1rem;
+    text-align: right;
 }
 .main-projects::-webkit-scrollbar {
     display: none;
@@ -255,6 +266,7 @@ a:hover {
         transform-origin: initial;
         padding-left: 10px;
         padding-right: 10px;
+        background-color: unset;
     }
     fieldset {
         margin-top: 1vh;
@@ -289,6 +301,7 @@ a:hover {
     }
     .avalon-icon {
         height: 30px;
+        margin-top: 10px;
         margin-right: 0.5rem;
         transform: unset;
     }
