--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -155,11 +155,13 @@ fieldset button {
 }
 .main-projects,
 .main-connect {
+    /* min-height: 10vh; */
     height: 90vh;
     max-width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    justify-content: center;
     row-gap: 80px;
     overflow-y: auto;
 }
