--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -69,19 +69,16 @@ nav {
     padding-left: 30px;
     padding-right: 20px;
 }
-fieldset {
-    margin-top: 13vh;
-    height: 50vh;
-    max-height: 50vh;
+form {
     width: 35vw;
     right: 50px;
     border: none;
 }
-fieldset * {
+form * {
     display: block;
 }
-fieldset input {
-    margin-bottom: 2rem;
+form input {
+    margin-bottom: 1.5rem;
     width: 100%;
     height: 40px;
     border-radius: 5px;
@@ -89,10 +86,10 @@ fieldset input {
     padding-left: 1rem;
     font-size: 1rem;
 }
-fieldset label {
-    margin-bottom: 15px;
+form label {
+    margin-bottom: 0.5rem;
 }
-fieldset textarea {
+form textarea {
     width: 100%;
     height: 220px;
     border-radius: 5px;
@@ -101,14 +98,25 @@ fieldset textarea {
     resize: none;
     font-size: 1rem;
 }
-fieldset button {
+.hidden {
+    display: none;
+}
+
+.submit-button {
     width: 100%;
     height: 40px;
     font-size: 1.25rem;
     border-radius: 5px;
     border: 1px solid gray;
-    margin-top: 3rem;
-    /* padding: 10px; */
+    margin-top: 1.5rem;
+   /* padding: 10px; */
+}
+
+input[type="submit"]:hover {
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    font-weight: bold;
 }
 .avalon-icon {
     height: 60px;
@@ -155,7 +163,6 @@ fieldset button {
 }
 .main-projects,
 .main-connect {
-    /* min-height: 10vh; */
     height: 90vh;
     max-width: 100vw;
     display: flex;
@@ -164,9 +171,6 @@ fieldset button {
     justify-content: center;
     row-gap: 80px;
     overflow-y: auto;
-}
-.main-connect {
-    margin-top: 13vh;
 }
 
 .connect h2 {
@@ -270,17 +274,17 @@ a:hover {
         padding-right: 10px;
         background-color: unset;
     }
-    fieldset {
+    form {
         margin-top: 1vh;
         position: unset;
         width: 100%;
         max-width: 100%;
         border: none;
     }
-    fieldset * {
+    form * {
         display: block;
     }
-    fieldset input {
+    form input {
         margin-bottom: 1rem;
         width: 100%;
         height: 2rem;
@@ -289,10 +293,10 @@ a:hover {
         padding-left: 5px;
         font-size: 1rem;
     }
-    fieldset label {
+    form label {
         margin-bottom: 10px;
     }
-    fieldset textarea {
+    form textarea {
         width: 100%;
         height: 120px;
         border-radius: 5px;
@@ -337,9 +341,6 @@ a:hover {
         flex-direction: column;
         justify-content: space-between;
     }
-    .main-content {
-        margin-top: 15vh;
-    }
     .main-content p {
         width: 100%;
         
@@ -353,7 +354,8 @@ a:hover {
     .main-content ul li {
         margin-right: 1rem;
     }
-    .main-projects {
+    .main-projects,
+    .main-connect {
         margin-top: 7vh;
         height: 35vh;
         max-height: 50vh;
@@ -363,6 +365,9 @@ a:hover {
         align-items: flex-end;
         row-gap: 30px;
         overflow-y: auto;
+    }
+    .main-connect {
+        justify-content: unset;
     }
     .project h2 {
         margin-left: 0.5rem;
