--- a/app/styles/loader.css
+++ b/app/styles/loader.css
@@ -16,21 +16,24 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    /* background: rgba(0, 0, 0, 0.834); */
+    background: radial-gradient( #106466 20px, #1f2422);
     z-index: 1;
 }
 
 .loader-ripple {
+    --size: 200px;
+    --blur-size: 1px;
     display: inline-block;
     position: relative;
-    width: 200px;
-    height: 200px;
+    width: var(--size);
+    height: var(--size);
 }
 
 .loader-ripple div {
     position: absolute;
     /* border: 4px solid #fff; */
-    border: 4px solid gray;
+    border: 4px solid #FFCB9B;
+    filter: blur(calc(var(--blur-size)));
     opacity: 1;
     border-radius: 50%;
     /* animation: loader-ripple 3s cubic-bezier(0, 0.2, 0.8, 1) infinite; */
